@@ -2,7 +2,7 @@
  OmegaT 2.2.3 update 3
 ----------------------------------------------------------------------
    0 Enhancement
-   1 Bug fix
+   2 Bug fixes
    3 Localisation updates
 ----------------------------------------------------------------------
 2.2.3 update 3 vs. 2.2.3 update 2
@@ -11,6 +11,8 @@
 
   - Android filter: the aspostrophe (') character was not escaped properly
 with a preceding \
+
+  - XLIFF filter: untranslatable text (translate="no") appeared in the Editor
 
   Localisation updates:
 
